gcc/testsuite/g++.dg/other/ptrmem9.C
// PR c++/33969
// { dg-do compile }

struct A;
void (*A::* fp)() const; // { dg-error "invalid in variable declaration" }
